# linen.dev

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.Api  LICENSE.txt  README.md  buildspec.yml  client.ts  db_seed.sql  docker-compose.yml  ecosystem.config.js  fetch_all_conversations.ts  jest.config.integration.js  jest.config.js  jest.setup.integration.js  jest.setup.js  middleware.ts  next.config.js  package-lock.json  package.json  sentry.client.config.js  sentry.server.config.js  setup.sh  singleton.ts  tailwind.config.js  tsconfig.json  turbo.json
.github/: pull_request_template.md
.husky/: pre-commit
__tests__/: singleton.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
cdk/: README.md  cdk.context.json  cdk.json  jest.config.js  package-lock.json  package.json
components/: Autocomplete.tsx  Avatar.tsx  CodeRangeText.tsx  LinkRangeText.tsx  Message.tsx  MessageRangeText.tsx  ThreadRow.tsx
constants/: examples.js  index.ts
dev/: .gitignore  Dockerfile.pgvector  dev.config.js  dev.sh  docker-compose.yml  ecosystem.config.js  up.sh
devSetup/: sampleAppManifest.yml
docs/: Building_chat_app_with_Nextjs_and_Elixir.md  brigdes.md  cdk.md  database.md  getting-started.md  monorepo.md  nextjs.md  pagination.md  performance.md  pg_vector.md  pm2.md  sitemap.md  slack-app.md
google-stats/: index.js
lib/: account.ts  api.ts  auth.ts  channel.ts  getThread.tsx  message.ts  models.ts  requests.js  requests.ts  slack.ts  thread.ts  user.ts  util.test.ts  util.ts
mailers/: ApplicationMailer.ts
(+2758 files in other folders)
